crates/strider-analyze/tests/snapshots/v3__ppc32le__calling_convention__mixed_4.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x1001032c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "11" -> "8" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "18" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "18" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "18" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "18" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "36" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x10020b14:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x10020b14:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "48" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "52" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "55" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "57" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "57" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
