crates/strider-analyze/tests/snapshots/v3__ppc32le__calling_convention__narrow_widths.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100102f4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xfffffff6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xfffffffa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffffb:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu32 → u16", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu32 → u16", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "39" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="ZeroExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "42" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "45" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "48" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x10020b10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u16\n→ ram[sp - 10]", shape=box3d, fillcolor="#20182a"];
  "51" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u16\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "53" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="StackStore u8\n→ ram[sp - 6]", shape=box3d, fillcolor="#20182a"];
  "55" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u8\n→ ram[sp - 5]", shape=box3d, fillcolor="#20182a"];
  "57" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "59" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "62" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "64" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
